// --- proto/replication.proto ---

syntax = "proto3";

package replication;

option go_package = "data-replication/pb;pb";

service Leader {
  rpc Write(WriteRequest) returns (WriteResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}

service Replica {
  rpc ReplicateLog(LogEntry) returns (Ack);
  rpc Commit(CommitRequest) returns (Ack);
  rpc Health(HealthRequest) returns (HealthResponse);
}

message HealthRequest {
}

message HealthResponse {
  bool healthy = 1;
}

message WriteRequest {
  string data = 1;
}

message WriteResponse {
  string status = 1;
}

message ReadRequest {
  int32 offset = 1;
}

message ReadResponse {
  repeated LogEntry entries = 1;
}

message LogEntry {
  int32 epoch = 1;
  int32 offset = 2;
  string data = 3;
  bool committed = 4;
}

message CommitRequest {
  int32 epoch = 1;
  int32 offset = 2;
}

message Ack {
  bool success = 1;
  string message = 2;
}